--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.2",
+    "mini-css-extract-plugin": "^2.7.5",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.12.0"
